Silva changes
=============

Silva 2.2b1 (unreleased)
------------------------

Bugs Fixed
~~~~~~~~~~

- The user clipboard 'remove user' button now returns to the correct add user form.

- Errors when attempting to upload interlaced PNGs are now caught and
  displayed to the user.

- launchpad #400019: Silva Link: allow editing of relative / absolute property,
  or get rid of it altogether.  Silva 2.1 allowed editing of this property.  Silva
  2.2 has removed the link type.  Now there is only one type of link, and it is the
  authors responsibility to ensure it is a valid relative or absolute link.

- For a possible security issue the "served by host foo" comment was removed
  from macro_index.pt

Silva 2.2a2 (2009-01-12)
------------------------

New Features
~~~~~~~~~~~~

- Recursive publishing actions: on the publish tab it is now possible
  to select containers.  If a folder is selected (which is transparent)
  all subobjects are also selected.  Publication types may also be selected.
  All publishing actions will now be applied to all items contained in the
  selected containers, and recursively all items within publications.

- A New "Kupu Popup" formulator field.  This field is for html content
  and pops up a "popup kupu" to provide easy wysiwyg editing.
  
- Redesigned link and image tools: the link and image reference fields
  now have an icon button for the 'get reference' functionality -- saving 
  toolbox space -- and when a reference is present an 'edit linked reference'
  button.  When clicked for a valid silva reference, this opens up a new window
  to the edit tab of the reference.
  
- The link tool's input field converts to a text area when it has the focus
  to allow for easier editing of long link references.

- External Source Tool: the select external source drop-down
  now has "Select Item" as the first option, rather than the
  ES at the top of the list.  This cleans up the interface a bit.
